# Design-Pattern

./: .gitignore  CMakeLists.txt
Composit/: CMakeLists.txt  main.cpp  mobile_component.hpp  star.cpp  star.hpp  stick.cpp  stick.hpp
Observer/: CMakeLists.txt  current_weather_display.cpp  current_weather_display.hpp  main.cpp  observer.hpp  weather_data.cpp  weather_data.hpp  weather_forecast_display.cpp  weather_forecast_display.hpp  weather_statistic_display.cpp  weather_statistic_display.hpp
State/: CMakeLists.txt  gumball_machine.cpp  gumball_machine.hpp  gumball_state.hpp
Strategy/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp  main.cpp  sort_context.cpp  sort_context.hpp  sort_strategy.hpp
